--- a/templates/logging.html
+++ b/templates/logging.html
@@ -3,15 +3,56 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>User Login</title>
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/logging.css') }}">
 </head>
 <body>
-  <h1>USER LOGGING</h1>
-  <form method="post">
-    <input name="username" placeholder="userName" type="text">
-    <input name="password" placeholder="Password" type="password">
-    <button type="submit">login</button>
-  </form>
-  <a href="{url_for('about')}" >I do not have a account</a>
+
+<div class="container">
+
+  <!-- LEFT SIDE -->
+  <div class="left">
+    <h1>Welcome to website</h1>
+    <p>
+      This website was created by Blair Peter 
+  </div>
+
+  <!-- RIGHT SIDE -->
+  <div class="right">
+    <div class="login-box">
+      <h2>USER LOGIN</h2>
+
+      <!-- FLASH MESSAGES -->
+      {% with messages = get_flashed_messages(with_categories=true) %}
+        {% if messages %}
+          {% for category, message in messages %}
+            <div class="flash {{ category }}">{{ message }}</div>
+          {% endfor %}
+        {% endif %}
+      {% endwith %}
+
+      <form method="post">
+        <input type="text" name="username" placeholder="Username" required>
+        <input type="password" name="password" placeholder="Password" required>
+
+        <div class="options">
+          <label>
+            <input type="checkbox"> Remember me
+          </label>
+          <a href="#">Forgot password?</a>
+        </div>
+
+        <button type="submit">LOGIN</button>
+      </form>
+
+      <p class="register">
+        Don’t have an account?
+        <a href="{{ url_for('signin') }}">Sign up</a>
+      </p>
+    </div>
+  </div>
+
+</div>
+
 </body>
 </html>
